Code now builds, but some implementations are still missing